# idx

./: README.md  mkdocs.yml  prefect.yaml  pyproject.toml
.github/workflows/: rhiza_benchmark.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_fuzzing.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_scorecard.yml  rhiza_sync.yml  rhiza_weekly.yml
.rhiza/: template.yml
cache/stoxx/: slpublic_sxxp_20260601.csv
src/idx/: __init__.py  download.py  enrichment.py  extract.py  main.py  ranking.py  storage.py
src/idx/cache/stoxx/: slpublic_sxxp_20260302.csv
tests/: test_download.py  test_enrichment.py  test_extract.py  test_main.py  test_ranking.py  test_storage.py
