[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "idx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "your-org" }
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = ["httpx", "prefect", "polars", "pdfplumber", "python-dotenv", "psycopg[binary]"]

[project.urls]
Homepage = "https://github.com/your-org/idx"
Repository = "https://github.com/your-org/idx"

[tool.hatch.build.targets.wheel]
packages = ["src/idx"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
    "respx>=0.22.0",
]
lint = [
    "ruff>=0.11.0",
]
dev = []

[tool.deptry.package_module_name_map]
python-dotenv = "dotenv"
